{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 211,
  "lineage": "40c2a08a-9904-d18f-5591-32b8ba926db1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:security-group/sg-07a3fec7d3c5cec7b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07a3fec7d3c5cec7b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "536697261163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0343bfb3b2627fc87",
            "arn": "arn:aws:ec2:us-east-1:536697261163:elastic-ip/eipalloc-0343bfb3b2627fc87",
            "association_id": "eipassoc-0c1622df3fd2f0a75",
            "domain": "vpc",
            "id": "eipalloc-0343bfb3b2627fc87",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04e57d6c8bb31ed7e",
            "private_dns": "ip-192-168-1-32.ec2.internal",
            "private_ip": "192.168.1.32",
            "public_dns": "ec2-184-72-240-168.compute-1.amazonaws.com",
            "public_ip": "184.72.240.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:internet-gateway/igw-06e106e17b36b793c",
            "id": "igw-06e106e17b36b793c",
            "owner_id": "536697261163",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:loadbalancer/app/webui-bedrock-alb/9b334b03e78ef37d",
            "arn_suffix": "app/webui-bedrock-alb/9b334b03e78ef37d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webui-bedrock-alb-1300579958.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697261163:loadbalancer/app/webui-bedrock-alb/9b334b03e78ef37d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webui-bedrock-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01f2a0bbc0601f1af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07182ef44104fcf14"
              },
              {
                "subnet_id": "subnet-07da2bfee485c45f4"
              },
              {
                "subnet_id": "subnet-0d964a0cf80c98ccf"
              }
            ],
            "subnets": [
              "subnet-07182ef44104fcf14",
              "subnet-07da2bfee485c45f4",
              "subnet-0d964a0cf80c98ccf"
            ],
            "vpc_id": "vpc-0b92359b94e348263",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "module.alb_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:listener/app/webui-bedrock-alb/9b334b03e78ef37d/fc55ecb8960799db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697261163:listener/app/webui-bedrock-alb/9b334b03e78ef37d/fc55ecb8960799db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:loadbalancer/app/webui-bedrock-alb/9b334b03e78ef37d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "module.alb_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:listener/app/webui-bedrock-alb/9b334b03e78ef37d/1cd308328bece6e0",
            "certificate_arn": "arn:aws:acm:us-east-1:536697261163:certificate/8427c282-7e38-4a5a-b487-5d3d805cab27",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697261163:listener/app/webui-bedrock-alb/9b334b03e78ef37d/1cd308328bece6e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:loadbalancer/app/webui-bedrock-alb/9b334b03e78ef37d",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.ssl_certificate",
            "aws_lb.alb",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "module.alb_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:targetgroup/webui-bedrock-target-group/d31465e44e15af46",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:listener-rule/app/webui-bedrock-alb/9b334b03e78ef37d/1cd308328bece6e0/53cb53b32e8e63a2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697261163:listener-rule/app/webui-bedrock-alb/9b334b03e78ef37d/1cd308328bece6e0/53cb53b32e8e63a2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:listener/app/webui-bedrock-alb/9b334b03e78ef37d/1cd308328bece6e0",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.ssl_certificate",
            "aws_lb.alb",
            "aws_lb_listener.alb_listener_https",
            "aws_lb_target_group.alb_target_group",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "module.alb_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697261163:targetgroup/webui-bedrock-target-group/d31465e44e15af46",
            "arn_suffix": "targetgroup/webui-bedrock-target-group/d31465e44e15af46",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 45,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697261163:targetgroup/webui-bedrock-target-group/d31465e44e15af46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:536697261163:loadbalancer/app/webui-bedrock-alb/9b334b03e78ef37d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webui-bedrock-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0343bfb3b2627fc87",
            "association_id": "eipassoc-0c1622df3fd2f0a75",
            "connectivity_type": "public",
            "id": "nat-01bfbd06036718a38",
            "network_interface_id": "eni-04e57d6c8bb31ed7e",
            "private_ip": "192.168.1.32",
            "public_ip": "184.72.240.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07da2bfee485c45f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e106e17b36b793c",
            "id": "r-rtb-0a33d7a30b88925901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a33d7a30b8892590",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03dd33f077e6193631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01bfbd06036718a38",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03dd33f077e619363",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ffb79234ea2f8d6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01bfbd06036718a38",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ffb79234ea2f8d6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04260e0564ae1eb531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01bfbd06036718a38",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04260e0564ae1eb53",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:route-table/rtb-03dd33f077e619363",
            "id": "rtb-03dd33f077e619363",
            "owner_id": "536697261163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01bfbd06036718a38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private"
            },
            "tags_all": {
              "Name": "rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:route-table/rtb-0ffb79234ea2f8d6c",
            "id": "rtb-0ffb79234ea2f8d6c",
            "owner_id": "536697261163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01bfbd06036718a38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private"
            },
            "tags_all": {
              "Name": "rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:route-table/rtb-04260e0564ae1eb53",
            "id": "rtb-04260e0564ae1eb53",
            "owner_id": "536697261163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01bfbd06036718a38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private"
            },
            "tags_all": {
              "Name": "rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:route-table/rtb-0a33d7a30b8892590",
            "id": "rtb-0a33d7a30b8892590",
            "owner_id": "536697261163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e106e17b36b793c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public"
            },
            "tags_all": {
              "Name": "rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_module",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940b2dd4b9d989e9",
            "route_table_id": "rtb-03dd33f077e619363",
            "subnet_id": "subnet-028c80baa57cf5547"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c679b07c9cb28a5",
            "route_table_id": "rtb-0ffb79234ea2f8d6c",
            "subnet_id": "subnet-0bb7c26ccb2cdf762"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00933c6652e3223b7",
            "route_table_id": "rtb-04260e0564ae1eb53",
            "subnet_id": "subnet-0118db234c035bcc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_webui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a7d20f686ad19ef",
            "route_table_id": "rtb-03dd33f077e619363",
            "subnet_id": "subnet-02c448f44b3d46cad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.webui_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e43bcb716ca59d2",
            "route_table_id": "rtb-0ffb79234ea2f8d6c",
            "subnet_id": "subnet-066a12d662701899d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.webui_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad4a80aadbc9eff7",
            "route_table_id": "rtb-04260e0564ae1eb53",
            "subnet_id": "subnet-0a828bdb8dae8577a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.webui_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df75b3eebd70a918",
            "route_table_id": "rtb-0a33d7a30b8892590",
            "subnet_id": "subnet-07da2bfee485c45f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0548cf3e32e88eb9b",
            "route_table_id": "rtb-0a33d7a30b8892590",
            "subnet_id": "subnet-0d964a0cf80c98ccf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003d3166b046fb542",
            "route_table_id": "rtb-0a33d7a30b8892590",
            "subnet_id": "subnet-07182ef44104fcf14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "module_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-028c80baa57cf5547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028c80baa57cf5547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module-private-subnet-us-east-1a",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "module-private-subnet-us-east-1a",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-0bb7c26ccb2cdf762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb7c26ccb2cdf762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module-private-subnet-us-east-1b",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "module-private-subnet-us-east-1b",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-0118db234c035bcc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0118db234c035bcc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module-private-subnet-us-east-1c",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "module-private-subnet-us-east-1c",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-07da2bfee485c45f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07da2bfee485c45f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-1a",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-1a",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-0d964a0cf80c98ccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d964a0cf80c98ccf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-1b",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-1b",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-07182ef44104fcf14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07182ef44104fcf14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-1c",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-1c",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webui_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-02c448f44b3d46cad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c448f44b3d46cad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webui-private-subnet-us-east-1a",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "webui-private-subnet-us-east-1a",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-066a12d662701899d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066a12d662701899d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webui-private-subnet-us-east-1b",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "webui-private-subnet-us-east-1b",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:subnet/subnet-0a828bdb8dae8577a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a828bdb8dae8577a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697261163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webui-private-subnet-us-east-1c",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "webui-private-subnet-us-east-1c",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc/vpc-0b92359b94e348263",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0fd56e485977b370b",
            "default_route_table_id": "rtb-0bb1d2e083945512c",
            "default_security_group_id": "sg-07a3fec7d3c5cec7b",
            "dhcp_options_id": "dopt-08b40a34d1959640a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b92359b94e348263",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb1d2e083945512c",
            "owner_id": "536697261163"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:security-group/sg-01f2a0bbc0601f1af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f2a0bbc0601f1af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "536697261163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_module_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:security-group/sg-05f3c15cb8b4e59db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f3c15cb8b4e59db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057d92781bd3733a8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "module-sg",
            "name_prefix": "",
            "owner_id": "536697261163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "module.alb_sg.aws_security_group._",
            "module.ecs_service_openwebui_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_ollama_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:security-group/sg-09057ae8926b624f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09057ae8926b624f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              }
            ],
            "name": "ecs-service-ollama-sg",
            "name_prefix": "",
            "owner_id": "536697261163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_openwebui_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:security-group/sg-057d92781bd3733a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057d92781bd3733a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f2a0bbc0601f1af"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "openwebui-sg",
            "name_prefix": "",
            "owner_id": "536697261163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "module.alb_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "module": "module.efs_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:security-group/sg-07c8bc5c6c5dbeabb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c8bc5c6c5dbeabb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057d92781bd3733a8"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "536697261163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default",
            "module.alb_sg.aws_security_group._",
            "module.ecs_service_openwebui_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_interface_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interfaces",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-0ad9aac285a8cf720",
            "dns_entry": [
              {
                "dns_name": "vpce-0ad9aac285a8cf720-53l5th71.bedrock.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ad9aac285a8cf720-53l5th71-us-east-1b.bedrock.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ad9aac285a8cf720-53l5th71-us-east-1a.bedrock.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ad9aac285a8cf720-53l5th71-us-east-1c.bedrock.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07465141K182R4GNX6PI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ad9aac285a8cf720",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0178c8d6316d13131",
              "eni-080dcfb308e730b27",
              "eni-0aab69b46bdce9145"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "bedrock",
              "Type": "bedrock"
            },
            "tags_all": {
              "Name": "bedrock",
              "Type": "bedrock"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-0762e2d2882c25ee8",
            "dns_entry": [
              {
                "dns_name": "vpce-0762e2d2882c25ee8-8jjugaku.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0762e2d2882c25ee8-8jjugaku-us-east-1a.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0762e2d2882c25ee8-8jjugaku-us-east-1c.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0762e2d2882c25ee8-8jjugaku-us-east-1b.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-runtime.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07464083QRYBFBV1WSOA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0762e2d2882c25ee8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001fa814e6d47e84a",
              "eni-007a890021ec20779",
              "eni-0b631a5f38ec2fba7"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-runtime",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "bedrock-runtime",
              "Type": "bedrock-runtime"
            },
            "tags_all": {
              "Name": "bedrock-runtime",
              "Type": "bedrock-runtime"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-0ef264dd0d4a1c242",
            "dns_entry": [
              {
                "dns_name": "vpce-0ef264dd0d4a1c242-iziz1eud.elasticfilesystem.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ef264dd0d4a1c242-iziz1eud-us-east-1a.elasticfilesystem.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ef264dd0d4a1c242-iziz1eud-us-east-1c.elasticfilesystem.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ef264dd0d4a1c242-iziz1eud-us-east-1b.elasticfilesystem.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticfilesystem.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0518688D95C4I7QEBL6"
              },
              {
                "dns_name": "efs.us-east-1.api.aws",
                "hosted_zone_id": "Z0332157223IARPF0YACJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ef264dd0d4a1c242",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02dd37380039d61a4",
              "eni-04af24d67bc8a99fa",
              "eni-07c32115a20304de8"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticfilesystem",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "elasticfilesystem",
              "Type": "elasticfilesystem"
            },
            "tags_all": {
              "Name": "elasticfilesystem",
              "Type": "elasticfilesystem"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-0d8ee07f4e362f7df",
            "dns_entry": [
              {
                "dns_name": "vpce-0d8ee07f4e362f7df-cajx7yvd.elasticfilesystem-fips.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d8ee07f4e362f7df-cajx7yvd-us-east-1c.elasticfilesystem-fips.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d8ee07f4e362f7df-cajx7yvd-us-east-1a.elasticfilesystem-fips.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d8ee07f4e362f7df-cajx7yvd-us-east-1b.elasticfilesystem-fips.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticfilesystem-fips.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00990521E3NBVT8PD4LU"
              },
              {
                "dns_name": "efs-fips.us-east-1.api.aws",
                "hosted_zone_id": "Z074632852FCQL2340AY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d8ee07f4e362f7df",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01427274bdda5dbd0",
              "eni-065a2d86b949fd99e",
              "eni-0f93f15e1ba6c0adb"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticfilesystem-fips",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "elasticfilesystem-fips",
              "Type": "elasticfilesystem-fips"
            },
            "tags_all": {
              "Name": "elasticfilesystem-fips",
              "Type": "elasticfilesystem-fips"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-04328c9e5523e9376",
            "dns_entry": [
              {
                "dns_name": "vpce-04328c9e5523e9376-odvu2ujl.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04328c9e5523e9376-odvu2ujl-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04328c9e5523e9376-odvu2ujl-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04328c9e5523e9376-odvu2ujl-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0747203FTACHSJ3ZIAX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04328c9e5523e9376",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-021390edec67ce3dd",
              "eni-091d4423885daf080",
              "eni-0f484c483b6a12208"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":\"secretsmanager:GetSecretValue\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"536697261163\"},\"Resource\":\"arn:aws:secretsmanager:*:536697261163:secret:*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "secretsmanager",
              "Type": "secretsmanager"
            },
            "tags_all": {
              "Name": "secretsmanager",
              "Type": "secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-0852bb5f3b80c0ed4",
            "dns_entry": [
              {
                "dns_name": "vpce-0852bb5f3b80c0ed4-tdj3svsl.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0852bb5f3b80c0ed4-tdj3svsl-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0852bb5f3b80c0ed4-tdj3svsl-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0852bb5f3b80c0ed4-tdj3svsl-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z035625537FBP82KA0SER"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0747208A8XIJO7IDW7W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0852bb5f3b80c0ed4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-089db7980d6b218fd",
              "eni-0a72b4aae47a5aba1",
              "eni-0f2c2ded4443d8a90"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "ecr.api",
              "Type": "ecr.api"
            },
            "tags_all": {
              "Name": "ecr.api",
              "Type": "ecr.api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-096d5b25b485566d5",
            "dns_entry": [
              {
                "dns_name": "vpce-096d5b25b485566d5-cit31e99.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-096d5b25b485566d5-cit31e99-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-096d5b25b485566d5-cit31e99-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-096d5b25b485566d5-cit31e99-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01062402B5LG9CY4K8U3"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01062402B5LG9CY4K8U3"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0725344I8YEEIQV34I6"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0725344I8YEEIQV34I6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-096d5b25b485566d5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0422b100d9b34250d",
              "eni-066ca6dee1916a290",
              "eni-0c449a2e5b0d07006"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "ecr.dkr",
              "Type": "ecr.dkr"
            },
            "tags_all": {
              "Name": "ecr.dkr",
              "Type": "ecr.dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-0c5833b24759118e7",
            "dns_entry": [
              {
                "dns_name": "vpce-0c5833b24759118e7-g42b0pvn.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c5833b24759118e7-g42b0pvn-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c5833b24759118e7-g42b0pvn-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c5833b24759118e7-g42b0pvn-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00993572M2LZJB3I23X"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z074900633BNDDCF6IMXR"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z05191491Z4VJU1KOP7ZW"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z074900728J1J3LCPMRZZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c5833b24759118e7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0118e48e913f3b8cf",
              "eni-059b1371d127d07c6",
              "eni-0750b7961c3492ff3"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":[\"logs:PutLogEvents\",\"logs:ListTagsLogGroup\",\"logs:DescribeLogGroups\",\"logs:DescribeExportTasks\",\"logs:CreateLogStream\",\"logs:CreateLogGroup\",\"logs:CreateExportTask\"],\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"536697261163\"},\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "logs",
              "Type": "logs"
            },
            "tags_all": {
              "Name": "logs",
              "Type": "logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:vpc-endpoint/vpce-0cf17fd109d141483",
            "dns_entry": [
              {
                "dns_name": "vpce-0cf17fd109d141483-a98dr0qp.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf17fd109d141483-a98dr0qp-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf17fd109d141483-a98dr0qp-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf17fd109d141483-a98dr0qp-us-east-1c.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03334821APBZ5J84VZ4I"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z05187432WIT3ZGTJMGFC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cf17fd109d141483",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-037b79692d5465139",
              "eni-07eda5f06b0d339a0",
              "eni-0fbeac760ddc091e8"
            ],
            "owner_id": "536697261163",
            "policy": "{\"Statement\":[{\"Action\":[\"kms:Sign\",\"kms:GenerateDataKey*\",\"kms:Encrypt\",\"kms:Decrypt\"],\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"536697261163\"},\"Resource\":\"arn:aws:kms:*:536697261163:key/*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06b946865dea5e31a"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-0118db234c035bcc6",
              "subnet-028c80baa57cf5547",
              "subnet-0bb7c26ccb2cdf762"
            ],
            "tags": {
              "Name": "kms",
              "Type": "kms"
            },
            "tags_all": {
              "Name": "kms",
              "Type": "kms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az",
            "data.aws_iam_policy_document.kms_endpoint_policy",
            "data.aws_iam_policy_document.logs_endpoint_policy",
            "data.aws_iam_policy_document.secretsmanager_endpoint_policy",
            "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg.aws_security_group._"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_interface_endpoints.module.vpc_interface_endpoints_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697261163:security-group/sg-06b946865dea5e31a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b946865dea5e31a",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoints-interface-sg",
            "name_prefix": "",
            "owner_id": "536697261163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92359b94e348263"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.module_private_subnets",
            "aws_vpc.default",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    }
  ]
}